Started localization with Spanish // WIP

--- a/frontend/app/app.component.html
+++ b/frontend/app/app.component.html
@@ -5,7 +5,7 @@
                 <div class="loading" *ngIf="!isLoaded">
                     <img alt="Loading" src="./images/loader.gif" />
 
-                    <div>Loading Squidex</div>
+                    <div translate>Loading Squidex</div>
                 </div>
             </router-outlet>
         </sqx-dialog-renderer>
