--- a/frontend/app/features/assets/pages/asset-tags.component.html
+++ b/frontend/app/features/assets/pages/asset-tags.component.html
@@ -1,6 +1,6 @@
 <a class="sidebar-item" (click)="reset.emit()" [class.active]="isEmpty()">
     <div class="row">
-        <div class="col">
+        <div class="col" translate>
             All tags
         </div>
     </div>
