--- a/frontend/app/features/content/pages/contents/custom-view-editor.component.html
+++ b/frontend/app/features/content/pages/contents/custom-view-editor.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <button type="button" class="btn btn-secondary btn-sm" (click)="resetDefault()">
+        <button type="button" class="btn btn-secondary btn-sm" (click)="resetDefault()" translate>
             Reset Default View
         </button>
     </div>
