--- a/frontend/app/features/content/shared/forms/assets-editor.component.html
+++ b/frontend/app/features/content/shared/forms/assets-editor.component.html
@@ -8,7 +8,7 @@
                 <div class="drop-area align-items-center" (click)="assetsDialog.show()"
                     (sqxDropFile)="addFiles($event)"
                     (sqxDropDisabled)="snapshot.isDisabled">
-                    Drop files or click
+                    {{ 'Drop files or click' | translate }}
                 </div>
             </div>
             <div class="col-auto pl-1">
