--- a/frontend/app/features/schemas/pages/schema/fields/field-wizard.component.html
+++ b/frontend/app/features/schemas/pages/schema/fields/field-wizard.component.html
@@ -51,12 +51,12 @@
                         </label>
                     </div>
 
-                    <sqx-form-hint>
+                    <sqx-form-hint translate="You can mark the field as localizable">
                         You can mark the field as localizable. It means that is dependent on the language, for example a city name.
                     </sqx-form-hint>
                 </div>
 
-                <sqx-form-alert class="mt-4">
+                <sqx-form-alert class="mt-4" translate="These values cannot be changed later">
                     These values cannot be changed later.
                 </sqx-form-alert>
             </form>
