--- a/frontend/app/framework/angular/modals/dialog-renderer.component.html
+++ b/frontend/app/framework/angular/modals/dialog-renderer.component.html
@@ -11,8 +11,8 @@
         </ng-container>
     
         <ng-container footer>
-            <button type="button" class="float-left btn btn-secondary" (click)="cancel()">No</button>
-            <button type="button" class="float-right btn btn-danger" (click)="confirm()" sqxFocusOnInit>Yes</button>
+            <button type="button" class="float-left btn btn-secondary" (click)="cancel()" translate>No</button>
+            <button type="button" class="float-right btn btn-danger" (click)="confirm()" sqxFocusOnInit translate>Yes</button>
         </ng-container>
     </sqx-modal-dialog>
 </ng-container>
