--- a/frontend/app/features/assets/pages/assets-page.component.html
+++ b/frontend/app/features/assets/pages/assets-page.component.html
@@ -1,8 +1,8 @@
-<sqx-title message="Assets"></sqx-title>
+<sqx-title message="{{ 'Assets' | translate }}"></sqx-title>
 
 <sqx-panel desiredWidth="*" minWidth="50rem" showSidebar="true" grid="true">
     <ng-container title>
-        Assets
+        {{ 'Assets' | translate }}
     </ng-container>
     
     <ng-container menu>
@@ -11,13 +11,13 @@
                 <sqx-shortcut keys="ctrl+shift+r" (trigger)="reload()"></sqx-shortcut>
 
                 <button type="button" class="btn btn-text-secondary" (click)="reload()" title="Refresh Contents (CTRL + SHIFT + R)">
-                    <i class="icon-reset"></i> Refresh
+                    <i class="icon-reset"></i> {{ 'Refresh' | translate }}
                 </button>
             </div>
             <div class="col pl-1" style="width: 300px">
                 <div class="row no-gutters search">
                     <div class="col-6">
-                        <sqx-tag-editor class="tags" singleLine="true" placeholder="Search by tags"
+                        <sqx-tag-editor class="tags" singleLine="true" placeholder="{{ 'Search by tags' | translate }}"
                             [suggestions]="assetsState.tagsNames | async"
                             [ngModel]="assetsState.selectedTagNames | async"
                             (ngModelChange)="selectTags($event)"
@@ -25,7 +25,7 @@
                         </sqx-tag-editor>
                     </div>
                     <div class="col-6">
-                        <sqx-search-form formClass="form" placeholder="Search by name" fieldExample="fileSize"
+                        <sqx-search-form formClass="form" placeholder="{{ 'Search by name' | translate }}" fieldExample="fileSize"
                             [query]="assetsState.assetsQuery | async"
                             [queries]="queries"
                             (queryChange)="search($event)"
@@ -74,7 +74,7 @@
 
     <ng-container sidebar>   
         <div class="panel-nav">
-            <a class="panel-link" routerLink="filters" routerLinkActive="active" title="Filters" titlePosition="left">
+            <a class="panel-link" routerLink="filters" routerLinkActive="active" title="{{ 'Filters' | translate }}" titlePosition="left">
                 <i class="icon-filter"></i>
             </a>    
         </div> 
