--- a/frontend/app/features/content/pages/content/content-page.component.html
+++ b/frontend/app/features/content/pages/content/content-page.component.html
@@ -8,14 +8,14 @@
             </a>
 
             <ng-container *ngIf="content else noContentTitle">
-                <sqx-title message="Edit Content"></sqx-title>
+                <sqx-title message="{{ 'Edit Content' | translate }} "></sqx-title>
 
-                Edit Content
+                {{ 'Edit Content' | translate }} 
             </ng-container>
             <ng-template #noContentTitle>
                 <sqx-title message="New Content"></sqx-title>
 
-                New Content
+                {{ 'New Content' | translate }} 
             </ng-template>
         </ng-container>
 
@@ -33,9 +33,9 @@
                             <div class="dropdown-menu" [sqxAnchoredTo]="buttonOptions" @fade>
                                 <a class="dropdown-item dropdown-item-delete"
                                     (sqxConfirmClick)="delete()"
-                                    confirmTitle="Delete content"
-                                    confirmText="Do you really want to delete the content?">
-                                    Delete
+                                    confirmTitle="{{ 'Delete content' | translate }}"
+                                confirmText="{{ 'Do you really want to delete the content?' | translate }}">
+                                {{ 'Delete' | translate }} 
                                 </a>
                             </div>
                         </ng-container>
@@ -44,7 +44,7 @@
 
                 <ng-container *ngIf="content?.canUpdate">
                     <button type="submit" class="btn btn-primary ml-1" title="CTRL + S">
-                        Save
+                        {{ 'Save' | translate }} 
                     </button>
 
                     <sqx-shortcut keys="ctrl+s" (trigger)="saveAndPublish()"></sqx-shortcut>
@@ -53,11 +53,11 @@
 
             <ng-template #noContent>
                 <button type="button" class="btn btn-secondary" (click)="save()" *ngIf="contentsState.canCreate | async">
-                    Save
+                    {{ 'Save' | translate }} 
                 </button>
 
                 <button type="submit" class="btn btn-primary ml-1" title="CTRL + S" *ngIf="contentsState.canCreateAndPublish | async">
-                    Save and Publish
+                    {{ 'Save and Publish' | translate }} 
                 </button>
 
                 <sqx-shortcut keys="ctrl+s" (trigger)="saveAndPublish()"></sqx-shortcut>
@@ -71,10 +71,10 @@
                 <ng-container topHeader>
                     <div class="panel-alert panel-alert-danger" *ngIf="contentVersion">
                         <div class="float-right">
-                            <a class="force" (click)="loadLatest()">View latest</a>
+                            <a class="force" (click)="loadLatest()" translate>View latest</a>
                         </div>
         
-                        Viewing <strong>version {{contentVersion}}</strong>.
+                        <span innerHTML="'Viewing version' | translate: {contentVersion: contentVersion}"></span>                        
                     </div>
                 </ng-container>
 
