--- a/frontend/app/features/content/pages/contents/contents-filters-page.component.html
+++ b/frontend/app/features/content/pages/contents/contents-filters-page.component.html
@@ -1,6 +1,6 @@
 <sqx-panel desiredWidth="20rem" isBlank="true" [isLazyLoaded]="false">
     <ng-container title>
-        Filters
+        {{ 'Filters' | translate }} 
     </ng-container>
 
     <ng-container content>
