--- a/frontend/app/features/content/shared/list/content.component.html
+++ b/frontend/app/features/content/shared/list/content.component.html
@@ -26,7 +26,7 @@
             <ng-container *sqxModal="dropdown;closeAlways:true">
                 <div class="dropdown-menu" [sqxAnchoredTo]="buttonOptions" position="bottom-left" @fade>
                     <a class="dropdown-item" *ngFor="let info of content.statusUpdates" (click)="statusChange.emit(info.status)">
-                        Change to 
+                        {{ 'Change to' | translate }}
 
                         <sqx-content-status layout="text" small="true"
                             [status]="info.status"
@@ -34,7 +34,7 @@
                         </sqx-content-status>
                     </a>
                     <a class="dropdown-item" (click)="clone.emit(); dropdown.hide()" *ngIf="canClone">
-                        Clone
+                        {{ 'Clone' | translate }} 
                     </a>
                     
                     <div class="dropdown-divider"></div>
@@ -43,7 +43,7 @@
                         (sqxConfirmClick)="delete.emit()"
                         confirmTitle="Delete content" 
                         confirmText="Do you really want to delete the content?">
-                        Delete
+                        {{ 'Delete' | translate }} 
                     </a>
                 </div>
             </ng-container>
