--- a/frontend/app/features/content/shared/references/content-selector.component.html
+++ b/frontend/app/features/content/shared/references/content-selector.component.html
@@ -22,7 +22,7 @@
                     </button>
                 </div>
                 <div class="col pl-1">
-                    <sqx-search-form formClass="form" placeholder="Fulltext search"
+                    <sqx-search-form formClass="form" placeholder="{{ 'Fulltext search' | translate }}"
                         [query]="contentsState.contentsQuery | async"
                         [queryModel]="queryModel"
                         (queryChange)="search($event)">
