--- a/frontend/app/features/schemas/pages/schemas/schema-form.component.html
+++ b/frontend/app/features/schemas/pages/schemas/schema-form.component.html
@@ -2,11 +2,11 @@
     <sqx-modal-dialog (close)="cancel.emit()">
         <ng-container title>
             <ng-container *ngIf="import; else noImport">
-                Clone Schema
+                {{ 'Clone Schema' | translate }}
             </ng-container>
 
             <ng-template #noImport>
-                Create Schema
+                {{ 'Create Schema' | translate }}
             </ng-template>
         </ng-container>
 
@@ -14,14 +14,14 @@
             <sqx-form-error [error]="createForm.error | async"></sqx-form-error>
         
             <div class="form-group">
-                <label for="schemaName">Name <small class="hint">(required)</small></label>
+                <label for="schemaName">{{ 'Name' | translate }} <small class="hint">({{ 'required' | translate }})</small></label>
                 
                 <sqx-control-errors for="name" submitOnly="true" [submitted]="createForm.submitted | async"></sqx-control-errors>
         
                 <input type="text" class="form-control" id="schemaName" formControlName="name" autocomplete="off" sqxTransformInput="LowerCase" sqxFocusOnInit />
 
-                <sqx-form-hint>
-                    You can only use letters, numbers and dashes and not more than 40 characters.
+                <sqx-form-hint translate>
+                    You can only use letters, numbers and dashes and not more than 40 characters
                 </sqx-form-hint>
             </div>
 
@@ -38,8 +38,8 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div class="type-title">Multiple contents</div>
-                                    <div class="type-text text-muted">Best for multiple instances like blog posts, pages, authors, products...</div>
+                                    <div class="type-title" translate>Multiple contents</div>
+                                    <div class="type-text text-muted" translate="Best for multiple instances">Best for multiple instances like blog posts, pages, authors, products...</div>
                                 </div>
                             </div>
 
@@ -56,8 +56,8 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div class="type-title">Single content</div>
-                                    <div class="type-text text-muted">Best for single instances like the home page, privacy policies, settings...</div>
+                                    <div class="type-title" translate>Single content</div>
+                                    <div class="type-text text-muted" translate="Best for single instances">Best for single instances like the home page, privacy policies, settings...</div>
                                 </div>
                             </div>
                         </label>
@@ -66,24 +66,24 @@
             </div>
 
             <div class="form-group">
-                <button type="button" class="btn btn-sm btn-text" (click)="toggleImport()" [class.hidden]="showImport">
+                <button type="button" class="btn btn-sm btn-text" (click)="toggleImport()" [class.hidden]="showImport" translate>
                     Import schema
                 </button>
-                <button type="button" class="btn btn-sm btn-text force" (click)="toggleImport()" [class.hidden]="!showImport">
+                <button type="button" class="btn btn-sm btn-text force" (click)="toggleImport()" [class.hidden]="!showImport" translate>
                     Hide
                 </button>
         
                 <sqx-json-editor height="250" *ngIf="showImport" formControlName="import"></sqx-json-editor>
             </div>
 
-            <sqx-form-alert marginBottom="0">
+            <sqx-form-alert marginBottom="0" translate="These values cannot be changed later">
                 These values cannot be changed later.
             </sqx-form-alert>
         </ng-container>
 
         <ng-container footer>
-            <button type="reset" class="float-left btn btn-secondary" (click)="cancel.emit()">Cancel</button>
-            <button type="submit" class="float-right btn btn-success">Create</button>
+            <button type="reset" class="float-left btn btn-secondary" (click)="cancel.emit()" translate>Cancel</button>
+            <button type="submit" class="float-right btn btn-success" translate>Create</button>
         </ng-container>
     </sqx-modal-dialog>
 </form>
