--- a/frontend/app/shared/components/app-form.component.html
+++ b/frontend/app/shared/components/app-form.component.html
@@ -20,21 +20,21 @@
         
                 <input type="text" class="form-control" id="name" formControlName="name" autocomplete="off" sqxTransformInput="LowerCase" sqxFocusOnInit />
                     
-                <sqx-form-hint>
-                    You can only use letters, numbers and dashes and not more than 40 characters.
+                <sqx-form-hint translate>
+                    You can only use letters, numbers and dashes and not more than 40 characters
                 </sqx-form-hint>
             </div>
 
             <div class="form-group">
-                <sqx-form-alert marginTop="2" marginBottom="0">
-                    The app name cannot be changed later.
+                <sqx-form-alert marginTop="2" marginBottom="0" translate>
+                    The app name cannot be changed later
                 </sqx-form-alert>
             </div>
         </ng-container>
 
         <ng-container footer>
-            <button type="reset" class="float-left btn btn-secondary" (click)="emitComplete()">Cancel</button>
-            <button type="submit" class="float-right btn btn-success">Create</button>
+            <button type="reset" class="float-left btn btn-secondary" (click)="emitComplete()" translate>Cancel</button>
+            <button type="submit" class="float-right btn btn-success" translate>Create</button>
         </ng-container>
     </sqx-modal-dialog>
 </form>
