--- a/frontend/app/shared/components/assets/assets-selector.component.html
+++ b/frontend/app/shared/components/assets/assets-selector.component.html
@@ -1,6 +1,6 @@
 <sqx-modal-dialog (close)="emitComplete()" size="lg" fullHeight="true">
     <ng-container title>
-        Select assets
+        {{ 'Select assets' | translate }}
     </ng-container>
 
     <ng-container tabs>
@@ -53,7 +53,7 @@
     </ng-container>
 
     <ng-container footer>
-        <button type="reset" class="float-left btn btn-secondary" (click)="emitComplete()">Cancel</button>
-        <button type="submit" class="float-right btn btn-success" (click)="emitSelect()" [disabled]="snapshot.selectionCount === 0">Link selected assets ({{snapshot.selectionCount}})</button>
+        <button type="reset" class="float-left btn btn-secondary" (click)="emitComplete()" translate>Cancel</button>
+        <button type="submit" class="float-right btn btn-success" (click)="emitSelect()" [disabled]="snapshot.selectionCount === 0">{{ 'Link selected assets' | translate }} ({{snapshot.selectionCount}})</button>
     </ng-container>
 </sqx-modal-dialog>
