--- a/frontend/app/shared/components/assets/image-focus-point.component.html
+++ b/frontend/app/shared/components/assets/image-focus-point.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-5">
-        <Label>Select position of focus point</Label>
+        <Label translate>Select position of focus point</Label>
 
         <div class="image">
             <div class="image-container absolute align-items-center justify-content-center">
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="col-7">
-        <Label>Preview for different sizes</Label>
+        <Label translate>Preview for different sizes</Label>
 
         <div class="preview preview-wide">
             <img #previewWide [src]="imageSource" />
