--- a/frontend/app/shared/components/forms/geolocation-editor.component.html
+++ b/frontend/app/shared/components/forms/geolocation-editor.component.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="form-group col-auto" *ngIf="!snapshot.isCompact">
-                <button [class.hidden]="!hasValue" type="reset" class="btn btn-text clear" [disabled]="snapshot.isDisabled" (click)="clearValue()">Clear</button>
+                <button [class.hidden]="!hasValue" type="reset" class="btn btn-text clear" [disabled]="snapshot.isDisabled" (click)="clearValue()" translate>Clear</button>
             </div>
         </form>
         <div class="col-auto">
