--- a/frontend/app/shared/components/search/shared-queries.component.html
+++ b/frontend/app/shared/components/search/shared-queries.component.html
@@ -1,5 +1,5 @@
 <div class="sidebar-section">
-    <h3>Shared queries</h3>
+    <h3 translate>Shared queries</h3>
 
     <sqx-query-list
         [canRemove]="true"
@@ -13,7 +13,7 @@
 <hr />
 
 <div class="sidebar-section">
-    <h3>My queries</h3>
+    <h3 translate>My queries</h3>
 
     <sqx-query-list
         [canRemove]="true"
