--- a/frontend/app/shell/pages/forbidden/forbidden-page.component.html
+++ b/frontend/app/shell/pages/forbidden/forbidden-page.component.html
@@ -3,5 +3,5 @@
 <div class="landing-page">
     <img class="splash-image" src="~/../squid.svg?title=FORBIDDEN&text=You%20are%20not%20allowed%20to%20view%20this%20page&background=white&small" />
 
-    <a href="#" (click)="back()">Back to previous page.</a>
+    <a href="#" (click)="back()" translate>Back to previous page</a>
 </div>
