--- a/frontend/app/shell/pages/not-found/not-found-page.component.html
+++ b/frontend/app/shell/pages/not-found/not-found-page.component.html
@@ -3,5 +3,5 @@
 <div class="landing-page">
     <img class="splash-image" src="~/../squid.svg?title=Not Found&text=This%20is%20not%20the%20page%20you%20are%20looking%20for!&background=white&small" />
 
-    <a href="#" (click)="back()">Back to previous page.</a>
+    <a href="#" (click)="back()" translate>Back to previous page</a>
 </div>
